Implement memory benchmarking